# objectbox-c

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  README.md  conan-export.sh  conanfile.py  download.sh  test.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
doxygen/: Changelog.md  Doxyfile  main-page.md
examples/: CMakeLists.txt  README.md  flatcc-fbs.sh  regenerate-schemas.sh
examples/c-cursor-no-gen/: CMakeLists.txt  flatbuffers_common_builder.h  flatbuffers_common_reader.h  main.c  task_builder.h  task_reader.h
examples/c-gen/: CMakeLists.txt  main.c  objectbox-model.h  tasklist.obx.h
examples/c-tasks/: CMakeLists.txt  build.sh  objectbox-model.json
examples/c-tasks-lowlevel/: .gitignore  CMakeLists.txt  README.md  build.sh  generate-flat-schema.sh  main.c  task_builder.h  task_reader.h
examples/cpp-autogen/: .gitignore  CMakeLists.txt  main.cpp  tasklist-example-app.hpp  tasklist.fbs
examples/cpp-gen/: CMakeLists.txt  main-sync.cpp  main.cpp  objectbox-model.h  objectbox-model.json  tasklist-cpp.obx.h  tasklist-example-app.hpp  tasklist.fbs  tasklist.obx.cpp  tasklist.obx.hpp
examples/cpp-gen-sync/: CMakeLists.txt  main.cpp  objectbox-model.h  objectbox-model.json  tasklist-example-app.hpp  tasklist.fbs  tasklist.obx.cpp  tasklist.obx.hpp
examples/tasks/: CMakeLists.txt  README.md  TasklistCmdlineApp.hpp  build.sh  main.c  main.cpp  objectbox-model.h  objectbox-model.json  task.fbs  task_reader.h  tasklist.fbs  tasklist.obx.cpp
examples/tasks-sync/: CMakeLists.txt  TasklistCmdlineApp.hpp  build.sh  main.cpp  objectbox-model.json  tasklist.fbs  tasklist.obx.hpp
examples/vectorsearch-cities/: CMakeLists.txt  README.md  VectorSearchCitiesApp.hpp  build.sh  city.fbs  city.obx.cpp  city.obx.hpp  main.cpp  objectbox-model.h  objectbox-model.json
include/: objectbox-cpp.h  objectbox-dart.h  objectbox-sync.h  objectbox-sync.hpp  objectbox.h  objectbox.hpp
src-test/: CMakeLists.txt  README.md  c_test.fbs  c_test_builder.h  c_test_objects.c  c_test_objects.h  c_test_reader.h  flatcc-test.sh  plain-c-test-main.c  query-test.c  query-test.h
src-test-gen/: CMakeLists.txt  README.md  c_test.fbs  c_test.obx.h  objectbox-model.h  objectbox-model.json  plain-c-test-main.c
